# sekant

./: .gitignore  ChangeLog.md  README.md  sekant.cabal  sekant.spec
src/: Main.hs
src/Sekant/: Output.hs  Run.hs  Shared.hs
src/Sekant/Command/: Audit.hs  Local.hs
